# DetectionLive

./: CMakeLists.txt  DetectionLive_zh_CN.ts  LICENSE  README.md  detection.cpp  detection.h  detection.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  preprocess.cpp  preprocess.h  videoprocess.cpp  videoprocess.h
